--- a/src/Propose/packages.config
+++ b/src/Propose/packages.config
@@ -22,11 +22,13 @@
   <package id="Microsoft.Owin.Security.Jwt" version="3.0.1" targetFramework="net462" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net462" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net462" />
+  <package id="Sendgrid" version="9.0.12" targetFramework="net462" />
   <package id="Strathweb.CacheOutput.WebApi2" version="0.9.0" targetFramework="net462" />
   <package id="Swashbuckle.Core" version="5.3.2" targetFramework="net462" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.206221351" targetFramework="net462" />
+  <package id="System.Net.Http" version="4.0.0" targetFramework="net462" />
   <package id="Unity" version="4.0.1" targetFramework="net462" />
   <package id="Unity.Interception" version="4.0.1" targetFramework="net462" />
   <package id="Unity.WebAPI" version="5.2.3" targetFramework="net462" />
