--- a/src/Propose.Frontend/Web.config
+++ b/src/Propose.Frontend/Web.config
@@ -8,7 +8,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <section name="authConfiguration" type="Propose.Security.AuthConfiguration, Propose" />
     <section name="appConfiguration" type="Propose.Configuration.AppConfiguration, Propose" />
-    <section name="smtpConfiguration" type="Propose.Features.Notifications.SmtpConfiguration, Propose" />
+    <section name="notificationsConfiguration" type="Propose.Features.Notifications.NotificationsConfiguration, Propose" />
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
