--- a/src/Propose/Propose.csproj
+++ b/src/Propose/Propose.csproj
@@ -216,7 +216,7 @@
     <Compile Include="Features\Ideas\IdeaHub.cs" />
     <Compile Include="Features\Notifications\NotificationService.cs" />
     <Compile Include="Features\Notifications\SendRegistrationConfirmationCommand.cs" />
-    <Compile Include="Features\Notifications\SmtpConfiguration.cs" />
+    <Compile Include="Features\Notifications\NotificationsConfiguration.cs" />
     <Compile Include="Features\Users\AddOrUpdateUserCommand.cs" />
     <Compile Include="Features\Users\Constants.cs" />
     <Compile Include="Features\Users\GetUserByIdQuery.cs" />
@@ -231,7 +231,6 @@
     <Compile Include="Security\AuthenticateCommand.cs" />
     <Compile Include="Security\EncryptionService.cs" />
     <Compile Include="Security\GetClaimsForUserQuery.cs" />
-    <Compile Include="Security\IAuthConfiguration.cs" />
     <Compile Include="Security\JwtOptions.cs" />
     <Compile Include="Security\JwtWriterFormat.cs" />
     <Compile Include="Security\OAuthOptions.cs" />
