--- a/src/Propose.Frontend/Web.config
+++ b/src/Propose.Frontend/Web.config
@@ -21,6 +21,7 @@
   </connectionStrings>  
   <appConfiguration baseUri="http://localhost:56622/" />
   <authConfiguration authType="olivia" tokenPath="/api/user/token" expirationMinutes="10080" jwtKey="UHxNtYMRYwvfpO1dS4pWLKL0M3DgOj30EbN4SoBWgfc=" jwtIssuer="localhost" jwtAudience="all" />
+  <notificationsConfiguration sendGridApiKey="test"></notificationsConfiguration>    
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
